# registre

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/registre/: __init__.py  main.py
tests/: test_main.py
